# Multi-LLM

./: .env.template  .gitlab-ci.yml  README.md  docker-compose.yml
api-gateway/: .env.template  Dockerfile  package-lock.json  package.json
api-gateway/src/: auth.ts  main.ts  models.ts
api-gateway/src/config/: swagger.ts
api-gateway/src/routes/: aiRoute.ts  conversationRoute.ts  messageRoute.ts  modelsRoute.ts  userApiKeysRoute.ts  userRoute.ts
backend-ai/: .env.template  Cargo.toml  Dockerfile
backend-ai/src/: main.rs
backend-ai/src/routes/: ai.rs  conversations.rs  messages.rs  mod.rs
backend-auth/: .env.template  Dockerfile  package-lock.json  package.json  tsconfig.json
backend-auth/src/: cryptoUtils.ts  main.ts
backend-auth/src/config/: database.ts
backend-auth/src/models/: associations.ts  model.ts  user.ts  userApiKeys.ts
backend-auth/src/routes/: modelRoute.ts  userApiKeysRoute.ts  userRoute.ts
database/: db_messages.sql  db_users.sql
frontend/: .dockerignore  .env.template  Dockerfile  angular.json  package-lock.json  package.json
frontend/src/: index.html  proxy.conf.js  styles.css
frontend/src/app/: ai.service.ts  app.config.ts  app.routes.ts  auth.service.ts
frontend/src/app/account-page/: account-page.component.css  account-page.component.html  account-page.component.ts
frontend/src/app/chat-history/: chat-history.component.css  chat-history.component.html  chat-history.component.ts
frontend/src/app/chat-zone/: chat-zone.component.css  chat-zone.component.html  chat-zone.component.ts
(+11 files in other folders)
