[package]
name = "backend-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.0"
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
openssl = { version = "0.10.71", features = ["vendored"] } # vendored for container else [] in local
hex = "0.4.3"
serde_json = "1.0.139"
futures = "0.3.31"